lib_LTLIBRARIES = libintheory-1.0.la
libintheory_1_0_la_SOURCES = intheory.c network.c proposer.c logger.c acceptor.c learner.c network_nodes.c network_server.c network_client.c util.c
library_includedir=$(includedir)/intheory-1.0/intheory
##library_include_HEADERS = include/intheory.h include/network.h include/proposer.h include/logger.h include/acceptor.h include/learner.h include/util.h include/state_machine.h
library_include_HEADERS = include/intheory.h
