lib_LTLIBRARIES = libintheory-1.0.la
libintheory_1_0_la_SOURCES = intheory.c network.c proposer.c logger.c acceptor.c learner.c network_nodes.c network_server.c network_client.c util.c crc.c callbacks.c store.c state_machine.c
library_includedir=$(includedir)/intheory-1.0/intheory
library_include_HEADERS = include/intheory.h
