check_PROGRAMS = test_lock test_proposer test_acceptor test_learner test_network_nodes test_network test_network_server test_integration test_4node_count test_store test_4node_contenious_count test_list
test_lock_SOURCES = test_lock.c test_common.c
test_lock_LDADD = ../src/libintheory-1.0.la
test_proposer_SOURCES = test_proposer.c test_common.c
test_proposer_LDADD = ../src/libintheory-1.0.la
test_acceptor_SOURCES = test_acceptor.c test_common.c 
test_acceptor_LDADD = ../src/libintheory-1.0.la
test_learner_SOURCES = test_learner.c test_common.c 
test_learner_LDADD = ../src/libintheory-1.0.la
test_network_nodes_SOURCES = test_network_nodes.c test_common.c 
test_network_nodes_LDADD = ../src/libintheory-1.0.la
test_network_SOURCES = test_network.c test_common.c 
test_network_LDADD = ../src/libintheory-1.0.la
test_network_server_SOURCES = test_network_server.c test_common.c 
test_network_server_LDADD = ../src/libintheory-1.0.la
test_integration_SOURCES = test_integration.c test_common.c 
test_integration_LDADD = ../src/libintheory-1.0.la
test_4node_count_SOURCES = test_4node_count.c test_4node_common.c
test_4node_count_LDADD = ../src/libintheory-1.0.la
test_4node_contenious_count_SOURCES = test_4node_contenious_count.c test_4node_common.c
test_4node_contenious_count_LDADD = ../src/libintheory-1.0.la
test_store_SOURCES = test_store.c
test_store_LDADD = ../src/libintheory-1.0.la
test_list_SOURCES = test_list.c
test_list_LDADD = ../src/libintheory-1.0.la
TESTS = test_lock test_proposer test_acceptor test_learner test_network_nodes test_network test_store test_network_server test_integration test_4node_count test_4node_contenious_count test_list
